fix styling for input fields to be left-aligned

--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,6 @@
   border: 1px solid darkgray;
   border-radius: 15px; 
   outline: none;
-  text-align: center;
   font-size: 18px;
   font-family: 'Montserrat', sans-serif;
   margin: 10px;
